003-ingress-egress-traffic/start/age-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sentences
    mode: age
  name: age
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    appProtocol: http
  selector:
    app: sentences
    mode: age
  type: ClusterIP
